--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "npm": "^9.6.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-paginate": "^8.2.0",
     "react-router": "^6.8.1",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
