--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-paginate": "^8.2.0",
+    "react-responsive": "^9.0.2",
+    "react-responsive-carousel": "^3.2.23",
     "react-router": "^6.8.1",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
