--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.5",
+    "gsap": "^3.12.1",
     "install": "^0.13.0",
     "mdb-react-ui-kit": "^5.1.0",
     "npm": "^9.6.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-lazy-load": "^4.0.1",
+    "react-loader-spinner": "^5.3.4",
     "react-paginate": "^8.2.0",
     "react-responsive": "^9.0.2",
     "react-responsive-carousel": "^3.2.23",
