--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "@fortawesome/fontawesome-free": "^6.2.1",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
-    "@mui/icons-material": "^5.11.0",
+    "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.11.6",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -22,6 +22,7 @@
     "react-dom": "^18.2.0",
     "react-lazy-load": "^4.0.1",
     "react-loader-spinner": "^5.3.4",
+    "react-lottie-player": "^1.5.4",
     "react-paginate": "^8.2.0",
     "react-responsive": "^9.0.2",
     "react-responsive-carousel": "^3.2.23",
