--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "npm": "^9.6.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.10.1",
     "react-lazy-load": "^4.0.1",
     "react-loader-spinner": "^5.3.4",
     "react-lottie-player": "^1.5.4",
+    "react-multi-carousel": "^2.8.4",
     "react-paginate": "^8.2.0",
     "react-responsive": "^9.0.2",
     "react-responsive-carousel": "^3.2.23",
