--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-lazy-load": "^4.0.1",
     "react-loader-spinner": "^5.3.4",
     "react-lottie-player": "^1.5.4",
+    "react-markdown": "^8.0.7",
     "react-multi-carousel": "^2.8.4",
     "react-paginate": "^8.2.0",
     "react-responsive": "^9.0.2",
