--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.3.5",
     "gsap": "^3.12.1",
     "install": "^0.13.0",
+    "markdown-it": "^13.0.1",
     "mdb-react-ui-kit": "^5.1.0",
     "npm": "^9.6.4",
     "react": "^18.2.0",
